# farmers-journey

./: .gitignore  161993-02-09-2025.json  161993-25-09-2025.json  22-09-19-2025.json  README.md  api_response_test.json  config.py  package-lock.json  package.json  pyproject.toml  rename_extensions.py  resource_summary.json  run_summary_analysis.py  tsconfig.json
app/: README.md  __init__.py  analysis.py  cache.py  database.py  game_state.py  image_generator.py  map_generator.py  routes.py  sunflower_api.py
app/domain/: animals.py  budItemBuffs.py  bud_rules.py  buds.py  buildings.py  bumpkin.py  calendar_events.py  collectiblesItemBuffs.py  crops.py  dimensions.py  expansions.py  factions.py  fishing.py  flowers.py  foods.py  fruits.py  item_map.py  nodes.py  npcs.py  prices.py  resources.py  seasons.py  seeds.py  skills.py  tasks.py  tools.py  treasure_dig.py  upgradables.py  wearablesItemBuffs.py
app/services/: __init__.py  animation_service.py  bud_service.py  calendar_service.py  chop_service.py  chores_service.py  crimstone_service.py  crop_machine_service.py  crop_service.py  delivery_service.py  exchange_service.py  expansion_service.py  farm_layout_service.py  (+17 more)
gameTS/: budBuffs.ts  en.json  harvest.ts  metadata (1).ts  plant.ts  plantGreenhouse.ts
tests/: conftest.py  test_analysis.py  test_calendar_service.py  test_crop_service.py  test_domain_data.py  test_sunflower_api.py
typescript/: animations.ts  card_positioner.ts  currency_converter.ts  dashboard.ts  expansion_planner.ts  floating_panel.ts  main.ts  resource_info_card.ts  summary_card.ts
(+25 files in other folders)
